style.css
:root {
    --bgc-500-primary: hsl(13, 61%, 40%);
    --bgc-400-primary: hsl(13, 61%, 50%);
    --bgc-300-primary: hsl(13, 61%, 60%);

    --bgc-500-secondary: hsl(40, 11%, 98%);
    --bgc-400-secondary: hsl(40, 11%, 95%);

    --text-xs: clamp(0.3rem, 1vw + 0.3rem, 1rem);
    --text-sm: clamp(0.875rem, 1.5vw + 0.5rem, 1rem);
    --text-base: clamp(1rem, 2vw + 0.25rem, 1.125rem);
    --text-lg: clamp(1.125rem, 2.5vw + 0.5rem, 1.375rem);
    --text-xl: clamp(1.375rem, 3vw + 0.75rem, 2rem);
    --text-xxl: clamp(2rem, 3vw + 1rem, 5rem);
}

* {
    box-sizing: border-box;
    padding: 0;
    margin: 0;
    font-family: Verdana, Geneva, sans-serif;
}

body {
    min-height: 100vh;

    background-color: black;

    display: flex;
    gap: 0.1rem;
}

.banner-image {
    flex: 1;

    background-image: url("peter-thomas-zasdv7_-Emg-unsplash.jpg");
    background-size: cover;
    background-repeat: no-repeat;
    background-position: center;

    padding-top: 10vh;
    padding-bottom: 5vh;

    display: none;
    flex-direction: column;
    justify-content: space-between
}

.banner-logo {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: rgba(0,0,0, 0.5);
    padding: 0.5rem;
}

.logo {
    width: 4rem;
}

.title {
    font-size: var(--text-xxl);
    color: white;
}

.banner-footer {
    font-size: var(--text-xs);
    color: white;
    display: flex;
    justify-content: center;
}

.banner-footer a {
    font-size: inherit;
    color: inherit;
    text-align: center;
}

.form {
    background-color: var(--bgc-500-secondary);
    padding: 1rem;

    flex: 2;
    
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    gap: 2rem;
    overflow-y: auto;
}

.form>.banner-logo {
    background-color: rgba(0,0,0, 1);
    width: 100%;
    display: flex;
}

.form-header {
    padding: 2rem;
    max-width: 45ch;
    font-size: var(--text-lg);
    font-weight: bold;
    text-align: center;

    display: flex;
    flex-direction: column;
    justify-content: end;
    gap: 2rem;
}

.form-body {
    background-color: var(--bgc-400-secondary);
    padding: 2rem;
    border: 0.1rem solid black;
    border-radius: 0.5rem;
    box-shadow: 0.1rem 0.2rem black;

    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 1.5rem;
}

.form-line {
    display: flex;
    flex-direction: column;
    gap: 1rem;
}

.form-field {
    --_shadow: var(--shadow, black);
    --_text-color: var(--text-color, black);
    width: fit-content;
    display: flex;
    flex-direction: column;
    border: none;
    color: var(--_text-color);
}

h1 {
    font-size: var(--text-xl);
    width: fit-content;
    padding: 1rem 0;
}

label {
    color: inherit;
    font-weight: bold;
}

input {
    color: inherit;
    padding: 0.5rem;
    outline: none;
    border-radius: 0.25rem;
    border: 0.1rem solid var(--_shadow);
    background-color: var(--bgc-500-secondary);
}

input:focus, input:active {
    box-shadow: 0.1rem 0.2rem var(--_shadow);
}

fieldset:has(input:invalid:not(:focus):not(:placeholder-shown)) {
  --shadow: red;
  --text-color: red;
}

label, input {
    font-size: var(--text-base);
    width: 32ch;
}

.form-footer {
    width: fit-content;
    display: flex;
    flex-direction: column;
    gap: 1rem;
    text-align: center;
}

.form-footer>button {
    font-size: var(--text-base);
    font-weight: bold;
    color: var(--bgc-400-secondary);
    background-color: var(--bgc-400-primary);
    padding: 1rem;
    border: 0.1rem solid black;
    border-radius: 0.5rem;
    box-shadow: 0.1rem 0.2rem black;
}

.form-footer>button:hover, .form-footer>button:active {
    background-color: var(--bgc-500-primary);
}

.form-footer>p {
    font-size: var(--text-sm);
}

.form-footer a {
    color: black;
}

/* Medium devices (landscape tablets, 768px and up) */
@media only screen and (min-width: 768px) {
    .banner-image {
        display: flex;
    }

    .form>.banner-logo {
        display: none;
    }

    .form-line {
        flex-direction: column;
    }
}

@media only screen and (min-width: 1200px) {
    .form-line {
        flex-direction: row;
    }
}

